deployments/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: envsend
  labels:
    name: envsend
    environment: production
